--- a/app/assets/stylesheets/compendium/_metrics.scss
+++ b/app/assets/stylesheets/compendium/_metrics.scss
@@ -48,7 +48,7 @@ div.metrics
     .metric-label-small
     {
       height: 20%;
-      font_size: 90%;
+      font-size: 90%;
     }
 
     &.small
@@ -59,7 +59,7 @@ div.metrics
 
       .metric-label
       {
-        padding-top: 0px;
+        padding-top: 0;
       }
 
       .metric-label-small
